Fix overflow of blockquote in knacss

--- a/style.css
+++ b/style.css
@@ -822,6 +822,8 @@ blockquote {
 }
 
 blockquote::before {
+  height: 30px;
+  overflow: hidden;
   content: "\201C";
   position: absolute;
   left: 0;
